[package]
name = "parse-suffix"
version = "0.1.2"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["string", "suffix", "proc-macro", "macros"]
categories = ["no-std", "no-std::no-alloc"]
description = "Process the string suffix as `.parse::<suffix>().unwrap()`"

license = "MIT"
repository = "https://github.com/A4-Tacks/parse-suffix-rs"
readme = "README.md"

[lib]
proc-macro = true
